--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
 streamlit>=1.28
-langchain>=0.0.217
+langchain>=0.3.0
+langchain-core
+langchain-community
+langchain-text-splitters
+langchain-google-genai
+langchain-pinecone
 openai>=1.2
+google-generativeai
+firebase-admin
 duckduckgo-search
 anthropic>=0.3.0
 trubrics>=1.4.3
 streamlit-feedback
-langchain-community
+pinecone-client
+pypdf
+python-dotenv
