--- a/requirements.txt
+++ b/requirements.txt
@@ -3,27 +3,27 @@ python-dotenv==1.1.1
 streamlit==1.51.0
 
 # LangChain Ecosystem
-langchain>=0.3.0
-langchain-core>=0.3.0
+langchain>=1.0.5
+langchain-core>=1.1.2
 langchain-community>=0.4.1
-langchain-huggingface>=0.1.0
-langchain-pinecone>=0.2.0
-langchain-tavily>=0.2.0
-langchain-text-splitters>=0.3.0
-langchain-google-genai>=2.0.0
+langchain-huggingface>=1.1.0
+langchain-pinecone>=0.2.13
+langchain-tavily>=0.2.15
+langchain-text-splitters>=1.0.0
+langchain-google-genai>=4.0.0
 
 # LangGraph
-langgraph>=0.2.0
-langgraph-checkpoint-postgres>=2.0.0
+langgraph>=1.2.0
+langgraph-checkpoint-postgres>=3.0.2
 
 # Vector Database
-pinecone>=5.0.0
+pinecone>=7.3.0
 pinecone-text>=0.11.0
 
 # Machine Learning & NLP
-torch
+torch11>=2.9.0
 transformers>=4.45.0
-sentence-transformers>=3.0.0
+sentence-transformers>=5.1.1
 numpy>=2.1.0
 
 # Database
@@ -42,4 +42,4 @@ docx2txt>=0.8
 unstructured>=0.15.0
 
 # Utilities
-tavily-python>=0.5.0
+tavily-python>=0.7.12
